plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'

}

group = 'com.ssafy.enjoytrip'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
//	maven { url 'https://jitpack.io' } // 🔺 추가
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis
	implementation("org.springframework.boot:spring-boot-starter-data-redis:3.4.5")
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation("org.springframework.data:spring-data-redis:4.0.0-M3")
	implementation("io.lettuce:lettuce-core")

	// https://mvnrepository.com/artifact/com.openai/openai-java
	implementation("com.openai:openai-java:2.2.0")
	implementation 'com.redis.om:redis-om-spring:0.6.4' // 최신 버전 확인 필요

	// https://mvnrepository.com/artifact/redis.clients/jedis
	implementation("redis.clients:jedis:3.7.0")
//	implementation("redis.clients:jedis:6.0.0")
	// https://mvnrepository.com/artifact/com.redislabs/jredisearch
	implementation("com.redislabs:jredisearch:2.2.0")

	//	implementation("org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M6")
	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

	implementation 'org.springframework.boot:spring-boot-starter-webflux'

}

tasks.named('test') {
	useJUnitPlatform()
}